--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -42,7 +42,7 @@
           <li class="nav-item">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/doc']">
               <i class="ni ni-key-25"></i>
-              <span class="nav-link-inner--text">Documentation</span>
+              <span class="nav-link-inner--text">Documentations</span>
             </a>
           </li>
         </ul>
