--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
-          <h1 class="text-white">I Stand With Health Professionals. You?</h1>
+          <h1 class="text-white">I Stand With Health Professionals. Are You?</h1>
           <p class="text-lead text-light">እኛ ለነሱ ፥ እነሱ እኛ</p>
         </div>
       </div>
