signe up with email

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -22,7 +22,7 @@
     <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
         <div class="card-header bg-transparent pb-5">
-          <div class="text-muted text-center mt-2 mb-4"><small>Sign up with Us</small></div>
+          <div class="text-muted text-center mt-2 mb-4"><small>Sign up with email</small></div>
           <div class="text-center">
             <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
               <span class="btn-inner--icon"><img src="assets/img/icons/common/github.svg"></span>
