Adding the state Afar

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -102,6 +102,7 @@
                   <option value="2">Amhara</option>
                   <option value="3">Oromia</option>
                   <option value="4">Tigrai</option>
+                  <option value="5">Afar</option>
                 </select>
               </div>
             </div>    
