--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> </span>
+                <span class="text-success mr-2"> </span>
                 <span class="text-nowrap"></span>
               </p>
             </div>
@@ -39,7 +39,7 @@
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> </span>
+                <span class="text-danger mr-2"></span>
                 <span class="text-nowrap"></span>
               </p>
             </div>
@@ -60,7 +60,7 @@
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> </span>
+                <span class="text-warning mr-2"> </span>
                 <span class="text-nowrap"></span>
               </p>
             </div>
@@ -81,7 +81,7 @@
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> </span>
+                <span class="text-success mr-2"> </span>
                 <span class="text-nowrap"></span>
               </p>
             </div>
