--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -62,7 +62,7 @@
             </div>
             <div class="alert">{{message}}</div>
             <div class="text-center">
-              <button type="submit" class="btn btn-primary my-4">Sign in</button>
+              <button [disabled] = 'loginForm.invalid' type="submit" class="btn btn-primary my-4">Sign in</button>
             </div>
           </form>
         </div>
