Registering_as_button_update_to_Radio-Button

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -40,8 +40,9 @@
           </div>
           <form [formGroup]="registerForm" role="form" (ngSubmit)="onSubmit()">
             <option value="">Registering as</option>
-                  <input type="radio" value="1"> helth profetional
-                  <input type="radio" value="2">helth profetional
+                  <input type="radio" value="1"> helth professionalsS
+                  <input type="radio" value="2">volunteer
+
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
