--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -38,7 +38,7 @@
 
         </div>          
         <div class="form-group">
-          <label class="form-check-label" for="message">help</label>
+          <label class="form-check-label" for="help">Please enter data, at most 5000 characters</label>
           <textarea formControlName="request" class="form-control" id="message" rows="6">
           </textarea>
           
