--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -123,7 +123,7 @@
                   {{request.first_name}} {{request.last_name}}
                 </th>
                 <td>
-                  {{request.title}}
+                  <a [title]="request.title" [routerLink]="['/request-detail',request.request_id]">{{request.title}}</a>
                 </td>
                 <td>
                   {{request.name}}
