Removing the second from date

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -129,7 +129,7 @@
                   {{request.name}}
                 </td>
                 <td>
-                  {{request.date_created}}
+                  {{request.date_created | date:'short'}}
                 </td>
               </tr>
             </tbody>
