--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -26,7 +26,7 @@
           <div class="form-group">
             <label for="title">Title</label>
             <span *ngIf = "(title.touched || title.dirty) && formSubmitted && title.invalid && title.errors.required"></span>
-            <input formControlName="title" type="text" class="form-control" id="title" aria-describedby="maxlenegth=20">
+            <input formControlName="title" type="text" class="form-control" id="title" aria-describedby="minimumlenegth=20">
             <p>atleast 20 characters or more</p>
           </div>          
           <div class="form-group">
