Converting dropdown to radio button

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -44,11 +44,8 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <select formControlName="registerAs" class="form-control" >
-                  <option value="">Registering as</option>
-                  <option value="1">Health Professional</option>
-                  <option value="2">Volunteer</option>
-                </select>
+                <span>Professional <input formControlName="registerAs" class="" type="radio" value="1"> </span>
+                <span>Volunteer <input formControlName="registerAs" class="" type="radio" value="2">                  </span>
               </div>
             </div>
             <div class="form-group">
