--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,6 +31,11 @@
               <span class="btn-inner--icon"><img src="../assets/img/icons/common/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a>
+            <div class="formGroup">
+              <button type="button" (click)="authService.FacebookAuth()">
+                 Log in with Facebook
+              </button>
+           </div>
           </div>
         </div>
         <div class="card-body px-lg-5 py-lg-5">
