login invalid user make in red color

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -60,7 +60,7 @@
                 <span class="text-muted">Remember me</span>
               </label>
             </div>
-            <div class="alert">{{message}}</div>
+            <div class="alert error-message">{{message}}</div>
             <div class="text-center">
               <button [disabled] = 'loginForm.invalid' type="submit" class="btn btn-primary my-4">Sign in</button>
             </div>
