adding comment box under request

--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -37,6 +37,19 @@
           </div>
           <div [ngClass]="{'success': success, 'error': !success}">{{message}}</div>
           <button [disabled]='!requestForm.valid' type="submit" class="btn btn-primary">Request</button>
+          <form>
+          <fieldset>
+            <b>comments</b>
+            <p>
+              <label></label>
+              <textarea>Your comments here</textarea>
+            </p>
+               
+              <buton (click)="onClick($event)">Submit</button>>
+              {{submitting}}
+
+          </fieldset>
+        </form>
         </form>
       </div>
     </div>
