--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -114,11 +114,12 @@
                 <th scope="col">Request By</th>
                 <th scope="col">Title</th>
                 <th scope="col">Priority</th>
+                <th scope="col">Status</th>
                 <th scope="col">Date</th>
               </tr>
             </thead>
             <tbody *ngFor="let request of requests">
-              <tr>
+              <tr [ngClass]="{'placed': request.status_name == 'PLACED', 'picked': request.status_name == 'PICKED'}">
                 <th scope="row">
                   {{request.first_name}} {{request.last_name}}
                 </th>
@@ -127,6 +128,9 @@
                 </td>
                 <td>
                   {{request.name}}
+                </td>
+                <td>
+                  {{request.status_name}}
                 </td>
                 <td>
                   {{request.date_created | date:'short'}}
