--- a/src/app/pages/request-detail/request-detail.component.html
+++ b/src/app/pages/request-detail/request-detail.component.html
@@ -9,9 +9,7 @@
   <div class="container-fluid mt--7">
     <div class="row">
       <div class="col">
-        <div class="card shadow border-0 p-10">
-          
-            
+        <div class="card shadow border-0 p-10" [ngClass]="{'placed': true}">
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <div id="title">{{title}}</div>
@@ -37,6 +35,13 @@
                 </div>
 
                 <div *ngIf="memberOwnsRequest()"><button type="button" class="btn btn-danger" (click)="removeRequest()">Remove request</button></div>
+                <div *ngIf="!request_already_picked">
+                  <div *ngIf="total_volunteers > 0; then thenBlock else elseBlock"></div>
+                  <button type="button" class="btn btn-success" (click)="taskPicked()">I can help</button>
+                </div>
+                <div *ngIf="request_already_picked">Thanks for picking this request</div>
+                <ng-template #thenBlock>{{total_volunteers}} awesome volunteers are working on this request.</ng-template>
+                <ng-template #elseBlock>Be the hero by picking this </ng-template>
         </div>
       </div>
     </div>
