adding commentbox under request

--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -45,7 +45,7 @@
               <textarea>Your comments here</textarea>
             </p>
                
-              <buton (click)="onClick($event)">Submit</button>>
+              <button (click)="onClick">Submit</button>
               {{submitting}}
 
           </fieldset>
