--- a/src/app/pages/request-detail/request-detail.component.html
+++ b/src/app/pages/request-detail/request-detail.component.html
@@ -37,11 +37,28 @@
                 <div *ngIf="memberOwnsRequest()"><button type="button" class="btn btn-danger" (click)="removeRequest()">Remove request</button></div>
                 <div *ngIf="!request_already_picked">
                   <div *ngIf="total_volunteers > 0; then thenBlock else elseBlock"></div>
-                  <button type="button" class="btn btn-success" (click)="taskPicked()">I can help</button>
                 </div>
                 <div *ngIf="request_already_picked">Thanks for picking this request</div>
-                <ng-template #thenBlock>{{total_volunteers}} awesome volunteers are working on this request.</ng-template>
-                <ng-template #elseBlock>Be the hero by picking this </ng-template>
+                <ng-template #thenBlock>
+                  <div class="row">
+                    <div class="col-md text-right">
+                      <button  *ngIf="!request_already_picked" type="button" class="btn btn-success" (click)="taskPicked()">I Can Help Too</button>
+                    </div>
+                    <div class="col-md">
+                      {{total_volunteers}} awesome volunteers are working on this request.
+                    </div>                    
+                  </div>
+                </ng-template>
+                <ng-template #elseBlock>
+                  <div class="row">
+                    <div class="col-md text-right">
+                      <button type="button" class="btn btn-success" (click)="taskPicked()">I Can Help Too</button>
+                    </div>
+                    <div class="col-md">
+                      Be the hero by picking this 
+                    </div>                    
+                  </div>
+                </ng-template>
         </div>
       </div>
     </div>
