--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -87,10 +87,10 @@
             <h6 class="heading-small text-muted mb-4">User information</h6>
             <div class="pl-lg-4">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Email</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value={{email}}>
+                    <div class="border border-info rounded">{{email}}</div>
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -100,13 +100,13 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value={{firstName}}>
+                    <div class="border border-info rounded">{{firstName}}</div>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value={{lastName}}>
+                    <div class="border border-info rounded">{{lastName}}</div>
                   </div>
                 </div>
               </div>
