--- a/src/app/pages/awesome-volunteers/awesome-volunteers.component.html
+++ b/src/app/pages/awesome-volunteers/awesome-volunteers.component.html
@@ -1,20 +1,36 @@
 <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-    <div class="container-fluid">
-      <div class="header-body">
-        <!-- Card stats -->
-      </div>
+  <div class="container-fluid">
+    <div class="header-body">
+      <!-- Card stats -->
     </div>
   </div>
-  <!-- Page content -->
-  <div class="container-fluid mt--7">
-    <div class="row">
-      <div class="col">
-        <div class="card shadow border-0">
-            <div class="">
-                List of awesome volunteers who are working on this request to be listed here. Work in progress.
-            </div>
+</div>
+<!-- Page content -->
+<div class="container-fluid mt--7">
+  <div class="row">
+    <div class="col">
+      <div class="card shadow border-0">
+        <div class="">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let volunteer of volunteers">
+              <tr>
+                <th scope="row">
+                  <a>{{volunteer.first_name}}</a>
+                </th>
+                <td>
+                  <a>{{volunteer.last_name}}</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
