--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -36,7 +36,7 @@
           <li class="nav-item">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/login']">
               <i class="ni ni-key-25"></i>
-              <span class="nav-link-inner--text">Login here </span>
+              <span class="nav-link-inner--text">Login  </span>
             </a>
           </li>
         </ul>
