--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
-          <h1 class="text-white">I Stand With Health Professionals. You?</h1>
+          <h1 class="text-white">I Stand With Health Professionals. Are You?</h1>
           <p class="text-lead text-light">እኛ ለነሱ ፥ እነሱ እኛ</p>
         </div>
       </div>
@@ -69,15 +69,15 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input formControlName="email" class="form-control" placeholder="Email" type="email">
+   <input formControlName="email" class="form-control" placeholder="Email" type="email">
               </div>
             </div>
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                  <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input formControlName="password" class="form-control" placeholder="password" type="password">
+                  <input formControlName="password" class="form-control" placeholder="password" type="password">
               </div>
             </div>            
             <div class="form-group">
