Showing all volunteers

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -32,6 +32,8 @@
                   <h5 class="card-title text-uppercase text-muted mb-0">Volunteers</h5>
                   <span class="h2 font-weight-bold mb-0">{{dashboard.volunteers}}</span>
                 </div>
+                <button type="button" class="btn btn-primary-outline pull-right" (click)="btnClick();">Show all</button>
+                <span class="h2 font-weight-bold mb-0">{{awesome.volunteers}}</span>    
                 <div class="col-auto">
                   <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                     <i class="fas fa-chart-pie"></i>
