--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -24,9 +24,9 @@
         <div class="card-header bg-transparent pb-5">
           <div class="text-muted text-center mt-2 mb-4"><small>Sign up with Us</small></div>
           <div class="text-center">
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/github.svg"></span>
-              <span class="btn-inner--text">Github</span>
+            <a (click)="facebookAuth()"href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
+              <span class="btn-inner--icon"><img src="assets/img/icons/common/facebook.svg"></span>
+              <span class="btn-inner--text">Facebook</span>
             </a>
             <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
               <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
@@ -36,7 +36,7 @@
         </div>
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
-            <small>Or sign up with credentials</small>
+            <h5>Or sign up with credentials</h5>
           </div>
           <form [formGroup]="registerForm" role="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
@@ -44,30 +44,29 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <span>Professional <input formControlName="registerAs" class="" type="radio" value="1"> </span>
-                <span>Volunteer <input formControlName="registerAs" class="" type="radio" value="2">                  </span>
+                <div>Professional <input formControlName="registerAs" class="" type= "checkbox" value="1"> </div>               
+                <span>Volunteer <input formControlName="registerAs" class="" type= "checkbox" value="2"> </span>             
               </div>
             </div>
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
+                  <span class="input-group-text"><i class="ni ni-addon-3"></i></span>
                 </div>
-                <input formControlName="firstName" class="form-control" placeholder="First Name" type="text">
-              </div>
+                <input formControlName="first Name" class="form-control" placeholder="First Name" type="text"></div>                            
             </div>            
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input formControlName="email" class="form-control" placeholder="Email" type="email">
+                <input type="email" class="form-control input-max" id="text" placeholder="Enter Text" angular-textcolor="">
               </div>
             </div>
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                  <span class="input-group-text"> <i class="ni ni-lock-circle-open"></i></span>
                 </div>
                 <input formControlName="password" class="form-control" placeholder="password" type="password">
               </div>
@@ -93,7 +92,7 @@
               </div>
             </div>    
             <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
+              <div class="input-group input-group-alternative mb-83">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-compass"></i>City</span>
                 </div>
