--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Our Professionals</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Health Professionals</h5>
                   <span class="h2 font-weight-bold mb-0">{{dashboard.professionals}}</span>
                 </div>
                 <div class="col-auto">
@@ -71,7 +71,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Completed</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Completed Requests</h5>
                   <span class="h2 font-weight-bold mb-0">{{dashboard.completed}}</span>
                 </div>
                 <div class="col-auto">
