show total link and new professional component added

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,6 +9,7 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">Our Professionals</h5>
+                  <h5 [routerLink]="['/awesome-professionals/:individual_id']" class="card-title text-uppercase text-muted mb-0">Show all</h5>
                   <span class="h2 font-weight-bold mb-0">{{dashboard.professionals}}</span>
                 </div>
                 <div class="col-auto">
