--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,10 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">Our Professionals</h5>
-                  <h5 [routerLink]="['/awesome-professionals/:individual_id']" class="card-title text-uppercase text-muted mb-0">Show all</h5>
-                  <span class="h2 font-weight-bold mb-0">{{dashboard.professionals}}</span>
+                  <div class="row">
+                    <div class="col"><span class="h2 font-weight-bold mb-0">{{dashboard.professionals}}</span> </div>
+                  <div class="col"><a [routerLink]="['/awesome-professionals/:individual_id']" class="btn-sm btn btn-primary">Show all</a></div>
+                  </div>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
