adding social registration

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -28,7 +28,7 @@
               <span class="btn-inner--icon"><img src="assets/img/icons/common/facebook.svg"></span>
               <span class="btn-inner--text">Facebook</span>
             </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+            <a (click)="googleAuth()" class="btn btn-neutral btn-icon">
               <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a>
@@ -51,7 +51,7 @@
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-addon-3"></i></span>
+                  <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
                 <input formControlName="first Name" class="form-control" placeholder="First Name" type="text"></div>                            
             </div>            
