--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -21,14 +21,14 @@
             </div>
           </div>
           <div class="card-body">
-            <form>
+            <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
               <h6 class="heading-small text-muted mb-4">User information</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Email</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" name="email" [(ngModel)]="email">
+                    <input type="text" formControlName="email" class="form-control form-control-alternative" placeholder="Email" >
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -38,47 +38,47 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" name="firstName" [(ngModel)]="firstName">
+                    <input type="text" formControlName="firstName" id="input-first-name" class="form-control form-control-alternative" placeholder="First name">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" name="lastName" [(ngModel)]="lastName">
+                    <input formControlName="lastName" type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" >
                   </div>
                 </div>
               </div>
             </div>
             <hr class="my-4" />
               <!-- Address -->
-              <h6 class="heading-small text-muted mb-4">Contact information</h6>
+              <h6 class="heading-small text-muted mb-4">Address information</h6>
               <div class="pl-lg-4">
                 <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-address">Address</label>
-                      <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-city">City</label>
-                      <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
+                      <label class="form-control-label" for="input-country">State</label>
+                      <select formControlName="state" class="form-control" (change)="populateCity($event.target.value)">
+                        <option value="">Select State</option>
+                        <label class="form-control-label" for="input-city">State</label>
+                        <option *ngFor="let s of states" value="{{s.state_id}}">{{s.name}}</option>
+                      </select>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-country">Country</label>
-                      <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
+                      <label class="form-control-label" for="input-country">City</label>
+                      <select formControlName="city" class="form-control">
+                        <option value="">Select City</option>
+                        <option *ngFor="let c of cities" value="{{c.city_id}}">{{c.name}}</option>
+                      </select>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-4 text-right">
-                    <a href="#!" class="btn btn-sm btn-primary">Save</a>
+                    <button type="submit" class="btn btn-sm btn-primary">Edit</button>
+                    <div>{{message}}</div>
                 </div>
                 </div>
               <hr class="my-4" />
