--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -6,10 +6,10 @@
   </div>
 </div>
 <!-- Page content -->
-<div class="container-fluid mt--7">
-  <div class="row">
-    <div class="col">
-      <div class="card shadow border-0">
+<div class="container">
+  <!-- <div class="row"> -->
+    <!-- <div class="col"> -->
+      <!-- <div class="card shadow border-0"> -->
         <form [formGroup]="requestForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="priority">Priority</label>
@@ -47,7 +47,7 @@
           <div [ngClass]="{'success': success, 'error': !success}">{{message}}</div>
           <button [disabled]='!requestForm.valid' type="submit" class="btn btn-primary">Request</button>
         </form>
-      </div>
-    </div>
-  </div>
+      <!-- </div> -->
+    <!-- </div> -->
+  <!-- </div> -->
 </div>
