picked link shows the title and who requested

--- a/src/app/pages/awesome-volunteers/awesome-volunteers.component.html
+++ b/src/app/pages/awesome-volunteers/awesome-volunteers.component.html
@@ -11,6 +11,10 @@
     <div class="col">
       <div class="card shadow border-0">
         <div class="">
+          <div class="col">
+            <h5 class="mb-0">Requested By- {{requestedBy}}</h5>
+            <h5 class="mb-0">The title is - {{title}} </h5><br />
+          </div>
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
