--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div>
-        <div [routerLink]="['/awesome-volunteers/1']" class="col-xl-3 col-lg-6">
+        <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
@@ -139,7 +139,7 @@
                   <!--Content is populated based on the if condition-->
                 </td>
                 <ng-template #withLink>
-                  <a [routerLink]="['/awesome-volunteers', request.request_id]">{{request.status_name}}</a>
+                  <a [routerLink]="['/awesome-volunteers', request.request_id, request.title, request.first_name]">{{request.status_name}}</a>
                 </ng-template>
                 <ng-template #withoutLink>
                   {{request.status_name}}
