--- a/src/app/pages/request-detail/request-detail.component.html
+++ b/src/app/pages/request-detail/request-detail.component.html
@@ -62,7 +62,7 @@
                 <ng-template #elseBlock>
                   <div class="row">
                     <div class="col-md text-right">
-                      <button  type="button" class="btn btn-success" (hide)="taskPicked()">I Can Help Too</button>
+                      <button  type="button" class="btn btn-primary" (hide)="taskPicked()">I Can Help Too</button>
                     </div>
                     <div class="col-md">
                       Be the hero by picking this 
