--- a/src/app/pages/request-detail/request-detail.component.html
+++ b/src/app/pages/request-detail/request-detail.component.html
@@ -39,7 +39,7 @@
                   <button *ngIf="show_confirm_cancel" type="button" class="btn btn-danger" (click)="confirmRemove()">Confirm</button>
                   <div *ngIf="show_confirm_cancel">{{removal_content}}</div>
                 </div>
-                <div *ngIf="!request_already_picked">
+                <div *ngIf="!request_already_picked && !memberOwnsRequest()">
                   <div *ngIf="total_volunteers > 0; then thenBlock else elseBlock"></div>
                 </div>
                 <div *ngIf="request_already_picked">Thanks for picking this request</div>
