Fixed the alignment of the table

--- a/src/app/pages/all-volunteers/all-volunteers.component.html
+++ b/src/app/pages/all-volunteers/all-volunteers.component.html
@@ -32,10 +32,7 @@
                     <a>{{volunteer.email}}</a>
                   </td>
                   <td>
-                    <a>{{Action}}</a>
-                  </td>
-                  <td>
-            <button id="Deactivate" type="button" class="btn-sm btn btn-primary">Deactivate</button> 
+            <button id="Deactivate" type="button" class="btn-sm btn-primary">Deactivate</button> 
                   </td>
                 </tr>
               </tbody>
