--- a/src/app/pages/comment/comment.component.html
+++ b/src/app/pages/comment/comment.component.html
@@ -4,5 +4,6 @@
       <textarea formControlName="comment" rows="6" class="form-control" id="comment"></textarea>
     </div>
     <button  [disabled]='!commentForm.valid' type="submit" class="btn btn-primary">Submit</button>
-    <div><!-- just placeholder till the main implementation --> {{message}}</div>
+    <div>{{message}}</div>
+    <div>you Commented: {{comments.comment}}</div>
   </form>
